# This file is licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Required to reference .bzl files in this package

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "compdb",
    targets = {
        "@llvm-project//clang/...": "",
        "@llvm-project//clang-tools-extra/...": "",
        "@llvm-project//llvm/...": "",
    },
)
